Feature/remove microstream and save cache in mongo (#451)