@@ -131,6 +131,11 @@
                 <artifactId>kotlin-stdlib</artifactId>
                 <version>1.9.25</version>
             </dependency>
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-reflect</artifactId>
+                <version>1.9.25</version>
+            </dependency>
 
             <!-- AGRIROUTER -->
             <dependency>
@@ -217,13 +222,6 @@
                 <version>1.3.0</version>
             </dependency>
 
-            <!-- MICROSTREAM -->
-            <dependency>
-                <groupId>one.microstream</groupId>
-                <artifactId>microstream-storage-embedded</artifactId>
-                <version>08.01.02-MS-GA</version>
-            </dependency>
-
             <!-- PROMETHEUS -->
             <dependency>
                 <groupId>io.micrometer</groupId>
@@ -285,6 +283,10 @@
             <artifactId>kotlin-stdlib</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
+        </dependency>
+        <dependency>
             <groupId>jakarta.ws.rs</groupId>
             <artifactId>jakarta.ws.rs-api</artifactId>
         </dependency>
@@ -319,8 +321,6 @@
                     <encoding>${project.encoding}</encoding>
                     <compilerArgs>
                         <arg>-Xlint:-options</arg>
-                        <arg>--add-exports</arg>
-                        <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
